# sdl-ising

./: .gitignore  CMakeLists.txt  README.md  dev-watch.sh  install-build-and-test.sh  main.cpp
